@@ -19,43 +19,26 @@ package org.jkiss.dbeaver.model.sql.semantics.context;
 import org.jkiss.code.NotNull;
 import org.jkiss.code.Nullable;
 import org.jkiss.dbeaver.Log;
+import org.jkiss.dbeaver.model.DBPDataSource;
 import org.jkiss.dbeaver.model.sql.SQLDialect;
-import org.jkiss.dbeaver.model.sql.semantics.SQLQueryQualifiedName;
-import org.jkiss.dbeaver.model.sql.semantics.SQLQuerySymbol;
-import org.jkiss.dbeaver.model.sql.semantics.SQLQuerySymbolEntry;
+import org.jkiss.dbeaver.model.sql.SQLUtils;
+import org.jkiss.dbeaver.model.sql.semantics.*;
+import org.jkiss.dbeaver.model.sql.semantics.model.SQLQueryMemberAccessEntry;
 import org.jkiss.dbeaver.model.sql.semantics.model.select.SQLQueryRowsSourceModel;
 import org.jkiss.dbeaver.model.stm.STMUtils;
 import org.jkiss.dbeaver.model.struct.DBSEntity;
 import org.jkiss.dbeaver.model.struct.DBSObject;
+import org.jkiss.dbeaver.utils.ListNode;
 import org.jkiss.utils.Pair;
 
 import java.util.*;
 import java.util.function.Function;
+import java.util.function.Supplier;
 import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
 public class SQLQueryRowsSourceContext {
 
     private static final Log log = Log.getLog(SQLQueryRowsSourceContext.class);
-
-    /**
-     * Describes the result of the query source resolution for the specified identifier name
-     */
-    public static class KnownRowsSourceInfo extends SourceResolutionResult {
-
-        @Nullable
-        public final SQLQueryComplexName referenceName;
-
-        protected KnownRowsSourceInfo(
-            @NotNull SQLQueryRowsSourceModel source,
-            @Nullable SQLQueryComplexName referenceName,
-            @Nullable DBSEntity tableOrNull,
-            @Nullable SQLQuerySymbol aliasOrNull
-        ) {
-            super(source, tableOrNull, aliasOrNull);
-            this.referenceName = referenceName;
-        }
-    }
 
     @NotNull
     private final SQLQueryConnectionContext connectionInfo;
@@ -63,34 +46,64 @@ public class SQLQueryRowsSourceContext {
     private final boolean hasUnresolvedSource;
 
     @NotNull
-    private final Map<SQLQueryComplexName, KnownRowsSourceInfo> rowsSources;
+    private final UnmodifiableMap<SQLQueryComplexName, SourceResolutionResult> rowsSources;
 
     @NotNull
-    private final Map<String, KnownRowsSourceInfo> dynamicTableSources;
+    private final UnmodifiableMap<String, SourceResolutionResult> dynamicTableSources;
 
     @NotNull
-    private final Map<String, KnownRowsSourceInfo> sourcesByLoweredAlias;
+    private final UnmodifiableMap<String, SourceResolutionResult> sourcesByLoweredAlias;
+
+    @Nullable
+    private ListNode<SQLQueryRowsSourceContext> targetRowContexts = null;
+
+    @Nullable
+    private ListNode<SQLQueryRowsDataContext> targetDataContexts = null;
+
+    @Nullable
+    private Supplier<SQLQueryRowsDataContext> relatedContextProvider = null;
 
     public SQLQueryRowsSourceContext(@NotNull SQLQueryConnectionContext connectionInfo) {
-        this.connectionInfo = connectionInfo;
-        this.hasUnresolvedSource = false;
-        this.rowsSources = Collections.emptyMap();
-        this.dynamicTableSources = Collections.emptyMap();
-        this.sourcesByLoweredAlias = Collections.emptyMap();
+        this(connectionInfo, false, UnmodifiableMap.emptyMap(), null);
     }
 
     private SQLQueryRowsSourceContext(
         @NotNull SQLQueryConnectionContext connectionInfo,
         boolean hasUnresolvedSource,
-        @NotNull Map<SQLQueryComplexName, KnownRowsSourceInfo> rowsSources,
-        @NotNull Map<String, KnownRowsSourceInfo> dynamicTableSources,
-        @NotNull Map<String, KnownRowsSourceInfo> sourcesByLoweredAlias
+        @NotNull UnmodifiableMap<String, SourceResolutionResult> dynamicTableSources,
+        @Nullable Supplier<SQLQueryRowsDataContext> relatedContextProvider
     ) {
         this.connectionInfo = connectionInfo;
+        this.hasUnresolvedSource = hasUnresolvedSource;
+        this.rowsSources = UnmodifiableMap.emptyMap();
+        this.dynamicTableSources = dynamicTableSources;
+        this.sourcesByLoweredAlias = UnmodifiableMap.emptyMap();
+        this.relatedContextProvider = relatedContextProvider;
+    }
+
+    private SQLQueryRowsSourceContext(
+        @NotNull SQLQueryRowsSourceContext parent,
+        boolean hasUnresolvedSource,
+        @NotNull UnmodifiableMap<SQLQueryComplexName, SourceResolutionResult> rowsSources,
+        @NotNull UnmodifiableMap<String, SourceResolutionResult> dynamicTableSources,
+        @NotNull UnmodifiableMap<String, SourceResolutionResult> sourcesByLoweredAlias,
+        @Nullable Supplier<SQLQueryRowsDataContext> relatedContextProvider
+    ) {
+        parent.registerConsumingContext(this);
+        this.connectionInfo = parent.connectionInfo;
         this.hasUnresolvedSource = hasUnresolvedSource;
         this.rowsSources = rowsSources;
         this.dynamicTableSources = dynamicTableSources;
         this.sourcesByLoweredAlias = sourcesByLoweredAlias;
+        this.relatedContextProvider = relatedContextProvider;
+    }
+
+    private void registerConsumingContext(@NotNull SQLQueryRowsSourceContext context) {
+        this.targetRowContexts = ListNode.push(this.targetRowContexts, context);
+    }
+
+    void registerConsumingContext(@NotNull SQLQueryRowsDataContext context) {
+        this.targetDataContexts = ListNode.push(this.targetDataContexts, context);
     }
 
     @NotNull
@@ -108,7 +121,32 @@ public class SQLQueryRowsSourceContext {
      */
     @NotNull
     public final SQLQueryRowsSourceContext reset() {
-        return new SQLQueryRowsSourceContext(this.connectionInfo);
+        return new SQLQueryRowsSourceContext(this.connectionInfo, false, this.dynamicTableSources, this.relatedContextProvider);
+    }
+
+    /**
+     * Prepare new semantic context by hiding all the involved rows sources such as subqueries and table references and marking this context as having unresolved rowset references
+     */
+    @NotNull
+    public final SQLQueryRowsSourceContext resetAsUnresolved() {
+        return new SQLQueryRowsSourceContext(this.connectionInfo, true, this.dynamicTableSources, this.relatedContextProvider);
+    }
+
+    @NotNull
+    public SQLQueryRowsSourceContext setRelatedContextProvider(@NotNull Supplier<SQLQueryRowsDataContext>  relatedContextProvider) {
+        return new SQLQueryRowsSourceContext(
+            this,
+            this.hasUnresolvedSource,
+            this.rowsSources,
+            this.dynamicTableSources,
+            this.sourcesByLoweredAlias,
+            relatedContextProvider
+        );
+    }
+
+    @Nullable
+    public Supplier<SQLQueryRowsDataContext> getRelatedContextProvider() {
+        return this.relatedContextProvider;
     }
 
     /**
@@ -122,8 +160,8 @@ public class SQLQueryRowsSourceContext {
      * Find semantic model item responsible for the representation of the dynamic table data like CTE being treated as an extra table
      */
     @Nullable
-    public KnownRowsSourceInfo findDynamicRowsSource(@NotNull SQLQueryComplexName name) {
-        return name.getParts().size() == 1 ? this.dynamicTableSources.get(name.getParts().getFirst().toLowerCase()) : null;
+    public SourceResolutionResult findDynamicRowsSource(@NotNull SQLQuerySymbolEntry name) {
+        return this.dynamicTableSources.get(name.getName().toLowerCase());
     }
 
     /**
@@ -133,38 +171,58 @@ public class SQLQueryRowsSourceContext {
      * @implNote TODO consider ambiguous table names
      */
     @Nullable
-    public KnownRowsSourceInfo findReferencedSource(@NotNull SQLQueryComplexName name) {
-        KnownRowsSourceInfo result = null;
+    public SourceResolutionInfo findReferencedSource(@NotNull SQLQueryComplexName name) {
+        if (!name.parts.isEmpty()) {
+            SQLQuerySymbolEntry entry = name.parts.getFirst();
+            SourceResolutionResult result = this.findSourceByAlias(entry.getName());
+            if (result != null) {
+                SQLQueryMemberAccessEntry endingPeriod;
+                if (name.parts.size() > 1 && name.parts.get(1) != null) {
+                    endingPeriod = name.parts.get(1).getMemberAccess();
+                } else if (name.parts.size() == 2 && name.parts.get(1) == null) {
+                    endingPeriod = name.endingPeriodNode;
+                } else {
+                    endingPeriod = null;
+                }
+                SQLQueryComplexName key = new SQLQueryComplexName(entry.getSyntaxNode(), List.of(entry), 0, endingPeriod);
+                return new SourceResolutionInfo(result, key);
+            }
+        }
+
         SQLQueryComplexName namePart = name;
         while (namePart != null) {
-            KnownRowsSourceInfo entry = this.rowsSources.get(namePart);
-            if (entry != null) {
-                result = entry;
-                break;
+            SourceResolutionResult result = this.rowsSources.get(namePart);
+            if (result != null) {
+                return new SourceResolutionInfo(result, namePart);
             } else {
                 namePart = namePart.trimEnd();
             }
         }
-        if (result == null && name.getParts().size() == 1) {
-            result = this.findSourceByAlias(name.getParts().get(0));
-        }
-        return result;
+        return null;
+    }
+
+    public record SourceResolutionInfo(
+        @NotNull SourceResolutionResult target,
+        @NotNull SQLQueryComplexName key
+    ) {
     }
 
     /**
      * Get the resolved query source by its name
      */
     @Nullable
-    public KnownRowsSourceInfo findReferencedSourceExact(@NotNull SQLQueryComplexName name) {
-        KnownRowsSourceInfo result = this.rowsSources.get(name);
-        if (result == null && name.getParts().size() == 1) {
-            result = this.findSourceByAlias(name.getParts().get(0));
+    public SourceResolutionResult findReferencedSourceExact(@NotNull SQLQueryComplexName name) {
+        if (name.stringParts.size() == 1 && name.invalidPartsCount == 0) {
+            SourceResolutionResult result = this.findSourceByAlias(name.stringParts.getFirst());
+            if (result != null) {
+                return result;
+            }
         }
-        return result;
+        return this.rowsSources.get(name);
     }
 
     @Nullable
-    private KnownRowsSourceInfo findSourceByAlias(@NotNull String aliasName) {
+    private SourceResolutionResult findSourceByAlias(@NotNull String aliasName) {
         return this.sourcesByLoweredAlias.get(aliasName.toLowerCase());
     }
 
@@ -173,17 +231,15 @@ public class SQLQueryRowsSourceContext {
      */
     @NotNull
     public SQLQueryRowsSourceContext combine(@NotNull SQLQueryRowsSourceContext other) {
-        return this.setRowsSources(new HashMap<>() {
-            {
-                putAll(other.rowsSources);
-                putAll(SQLQueryRowsSourceContext.this.rowsSources);
-            }
-        }, new HashMap<>() {
-            {
-                putAll(other.sourcesByLoweredAlias);
-                putAll(SQLQueryRowsSourceContext.this.sourcesByLoweredAlias);
-            }
-        });
+        SQLQueryRowsSourceContext result = this.setRowsSources(
+            this.rowsSources.combine(other.rowsSources),
+            this.sourcesByLoweredAlias.combine(other.sourcesByLoweredAlias),
+            this.dynamicTableSources.combine(other.dynamicTableSources),
+            SQLQueryRowsSourceContext.this.hasUnresolvedSource || other.hasUnresolvedSource,
+            null
+        );
+        other.registerConsumingContext(result);
+        return result;
     }
 
     /**
@@ -192,43 +248,59 @@ public class SQLQueryRowsSourceContext {
     @NotNull
     public final SQLQueryRowsSourceContext appendSource(
         @NotNull SQLQueryRowsSourceModel source,
-        @NotNull SQLQueryComplexName name,
+        @NotNull SQLQueryComplexName classifiedName,
         @Nullable DBSEntity tableOrNull
     ) {
-        return this.setRowsSources(new HashMap<>() {
-            {
-                putAll(SQLQueryRowsSourceContext.this.rowsSources);
-                put(name, new KnownRowsSourceInfo(source, name, tableOrNull, null));
+        SourceResolutionResult srr = new SourceResolutionResult(source, classifiedName, tableOrNull, null);
+
+        ArrayList<Map.Entry<SQLQueryComplexName, SourceResolutionResult>> newSourceEntries = new ArrayList<>(5);
+        newSourceEntries.add(Map.entry(classifiedName, srr));
+
+        if (tableOrNull != null && classifiedName.parts.getFirst().getDefinition() instanceof SQLQuerySymbolByDbObjectDefinition subparent) {
+            for (SQLQueryComplexName nameFragment = classifiedName.trimStart(); nameFragment != null; nameFragment = nameFragment.trimStart()) {
+                newSourceEntries.add(Map.entry(nameFragment, srr));
             }
-        }, this.sourcesByLoweredAlias);
+            SQLQueryComplexName synthesizedName = classifiedName;
+            for (DBSObject o = subparent.getDbObject().getParentObject(); o != null && !(o instanceof DBPDataSource); o = o.getParentObject()) {
+                String canonicalName = SQLUtils.identifierToCanonicalForm(this.connectionInfo.dialect, o.getName(), false, true);
+                SQLQuerySymbolEntry entry = new SQLQuerySymbolEntry(classifiedName.syntaxNode, canonicalName, o.getName(), null);
+                entry.setDefinition(new SQLQuerySymbolByDbObjectDefinition(o, SQLQuerySemanticUtils.inferSymbolClass(o)));
+                synthesizedName = synthesizedName.prepend(entry);
+                newSourceEntries.add(Map.entry(synthesizedName, srr));
+            }
+        }
+
+        return this.setRowsSources(
+            this.rowsSources.put(newSourceEntries),
+            this.sourcesByLoweredAlias,
+            this.dynamicTableSources,
+            this.hasUnresolvedSource,
+            this.relatedContextProvider
+        );
     }
 
     /**
      * Associate alias with the resolved query source
      */
     @NotNull
-    public final SQLQueryRowsSourceContext appendAlias(@NotNull SQLQueryRowsSourceModel source, @NotNull SQLQuerySymbol alias) {
-        KnownRowsSourceInfo entry = this.rowsSources.values().stream().filter(s -> s.source == source).findFirst().orElse(null);
-        KnownRowsSourceInfo newEntry;
-        if (entry != null) {
-            newEntry = new KnownRowsSourceInfo(entry.source, entry.referenceName, entry.tableOrNull, alias);
-        } else {
-            newEntry = new KnownRowsSourceInfo(source, null, null, alias);
-        }
-        return this.setRowsSources(new HashMap<>() {
-            {
-                putAll(SQLQueryRowsSourceContext.this.rowsSources);
-                if (entry != null) {
-                    put(entry.referenceName, newEntry);
-                }
-                put(new SQLQueryComplexName(alias.getName()), newEntry);
-            }
-        }, new HashMap<>() {
-            {
-                putAll(SQLQueryRowsSourceContext.this.sourcesByLoweredAlias);
-                put(alias.getName().toLowerCase(), newEntry);
-            }
-        });
+    public final SQLQueryRowsSourceContext replaceWithAlias(
+        @NotNull SQLQueryRowsSourceModel oldSource,
+        @NotNull SQLQueryRowsSourceModel newSource,
+        @NotNull SQLQuerySymbolEntry alias
+    ) {
+        List<Map.Entry<SQLQueryComplexName, SourceResolutionResult>> oldEntries = this.rowsSources.entrySet().stream()
+            .filter(s -> s.getValue().source == oldSource).toList();
+
+        DBSEntity oldEntryTable = oldEntries.isEmpty() ? null : oldEntries.getFirst().getValue().tableOrNull;
+        SourceResolutionResult newEntry = new SourceResolutionResult(newSource, null, oldEntryTable, alias.getSymbol());
+
+        return this.setRowsSources(
+            this.rowsSources.remove(oldEntries),
+            this.sourcesByLoweredAlias.put(alias.getName().toLowerCase(), newEntry),
+            this.dynamicTableSources,
+            this.hasUnresolvedSource,
+            this.relatedContextProvider
+        );
     }
 
     /**
@@ -236,26 +308,24 @@ public class SQLQueryRowsSourceContext {
      */
     @NotNull
     public final SQLQueryRowsSourceContext appendCteSources(@NotNull List<Pair<SQLQuerySymbolEntry, SQLQueryRowsSourceModel>> sources) {
-        return this.setDynamicRowsSources(new HashMap<>() {
-            {
-                putAll(SQLQueryRowsSourceContext.this.dynamicTableSources);
-                for (Pair<SQLQuerySymbolEntry, ? extends SQLQueryRowsSourceModel> entry : sources) {
-                    SQLQuerySymbolEntry alias = entry.getFirst();
-                    if (alias != null) {
-                        SQLQueryRowsSourceModel sourceModel = entry.getSecond();
-                        SQLQueryComplexName name = new SQLQueryComplexName(new SQLQueryQualifiedName(
-                            alias.getSyntaxNode(), Collections.emptyList(), alias, 0, null
-                        ));
-                        put(alias.getName().toLowerCase(), new KnownRowsSourceInfo(sourceModel, name, null, alias.getSymbol()));
-                    }
-                }
+        ArrayList<Map.Entry<String, SourceResolutionResult>> newSourceEntries = new ArrayList<>(sources.size());
+        for (Pair<SQLQuerySymbolEntry, ? extends SQLQueryRowsSourceModel> entry : sources) {
+            SQLQuerySymbolEntry alias = entry.getFirst();
+            if (alias != null) {
+                SQLQueryRowsSourceModel sourceModel = entry.getSecond();
+                SQLQueryComplexName name = new SQLQueryComplexName(alias.getSyntaxNode(), List.of(alias), 0, null);
+                newSourceEntries.add(Map.entry(
+                    alias.getName().toLowerCase(),
+                    new SourceResolutionResult(sourceModel, name, null, alias.getSymbol())
+                ));
             }
-        });
+        }
+        return this.setDynamicRowsSources(this.dynamicTableSources.put(newSourceEntries));
     }
 
     @NotNull
     public final SQLQueryRowsSourceContext setCteSourcesFrom(@NotNull SQLQueryRowsSourceContext context) {
-        return this.setDynamicRowsSources(Map.copyOf(context.dynamicTableSources));
+        return this.setDynamicRowsSources(context.dynamicTableSources);
     }
 
     ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
@@ -263,6 +333,7 @@ public class SQLQueryRowsSourceContext {
     /**
      * Create empty data context
      */
+    @NotNull
     public SQLQueryRowsDataContext makeEmptyTuple() {
         return new SQLQueryRowsDataContext(
             this,
@@ -274,6 +345,7 @@ public class SQLQueryRowsSourceContext {
     /**
      * Create row tuple model acting as a context for column references resolution
      */
+    @NotNull
     public SQLQueryRowsDataContext makeTuple(
         @NotNull List<SQLQueryResultColumn> columns,
         @NotNull List<SQLQueryResultPseudoColumn> pseudoColumns
@@ -284,6 +356,7 @@ public class SQLQueryRowsSourceContext {
     /**
      * Create row tuple model acting as a context for column references resolution
      */
+    @NotNull
     public final SQLQueryRowsDataContext makeTuple(
         @Nullable SQLQueryRowsSourceModel source,
         @NotNull List<SQLQueryResultColumn> columns,
@@ -292,30 +365,77 @@ public class SQLQueryRowsSourceContext {
         // TODO: review pseudoattributes behavior in DDL expressions (not handling for now)
         List<SQLQueryResultPseudoColumn> allPseudoColumns = source == null
             ? pseudoColumns
-            : STMUtils.combineLists(this.connectionInfo.rowsetPseudoColumnsProvider.apply(source), pseudoColumns);
+            : STMUtils.combineLists(this.connectionInfo.obtainRowsetPseudoColumns(source), pseudoColumns);
         return new SQLQueryRowsDataContext(this, columns, allPseudoColumns);
+    }
+
+    /**
+     * Create row tuple model acting as a context for column references resolution
+     */
+    @NotNull
+    public final SQLQueryRowsDataContext makeTuple(
+        @Nullable SQLQueryRowsSourceModel source,
+        @NotNull Pair<List<SQLQueryResultColumn>, List<SQLQueryResultPseudoColumn>> columnsAndPseudoColumns
+    ) {
+        return this.makeTuple(source, columnsAndPseudoColumns.getFirst(), columnsAndPseudoColumns.getSecond());
+    }
+
+    /**
+     * Create row tuple model acting as a context for column references resolution
+     */
+    @NotNull
+    public SQLQueryRowsDataContext makeJoinTuple(
+        @NotNull List<SQLQueryResultColumn> columns,
+        @NotNull List<SQLQueryResultPseudoColumn> pseudoColumns,
+        @NotNull SQLQueryRowsDataContext.JoinInfo joinInfo
+    ) {
+        return new SQLQueryRowsDataContext(this, columns, pseudoColumns, joinInfo);
     }
 
     /**
      * Returns information about resolved sources with ability to separately provide tables and aliases used in the query
      */
     @NotNull
-    public SQLQuerySourcesInfoCollection getKnownSources() {
+    public SQLQuerySourcesInfoCollection getKnownSources(boolean forQuerySubscope) {
+        ListNode<SQLQueryRowsSourceContext> queue = ListNode.of(this);
+        Set<SQLQueryRowsSourceContext> queued = new HashSet<>();
+        queued.add(this);
+
+        Set<SourceResolutionResult>  allSourceResolutions = new HashSet<>();
+
+        while (queue != null) {
+            SQLQueryRowsSourceContext source = queue.data;
+            queue = queue.next;
+
+            allSourceResolutions.addAll(source.rowsSources.values());
+            allSourceResolutions.addAll(source.sourcesByLoweredAlias.values());
+            allSourceResolutions.addAll(source.dynamicTableSources.values());
+
+            if (forQuerySubscope) {
+                for (ListNode<SQLQueryRowsSourceContext> item = source.targetRowContexts; item != null; item = item.next) {
+                    if (queued.add(item.data)) {
+                        queue = ListNode.push(queue, item.data);
+                    }
+                }
+            }
+        }
+
         return new SQLQuerySourcesInfoCollection() {
             // combine inferred sources (from the underlying query expression) and dynamically provided (from the enclosing CTE)
             private final Map<SQLQueryRowsSourceModel, SourceResolutionResult> resolutionResults =
-                Stream.of(rowsSources.values(), dynamicTableSources.values())
-                    .flatMap(Collection::stream)
-                    .distinct()
-                    .collect(Collectors.toMap(s -> s.source, Function.identity()));
+                allSourceResolutions.stream().collect(Collectors.toMap(s -> s.source, Function.identity()));
 
-            private final Set<DBSObject> referencedTables = rowsSources.values().stream().map(s -> s.tableOrNull)
+            @NotNull
+            private final Set<DBSEntity> referencedTables = allSourceResolutions.stream()
+                .map(s -> s.tableOrNull)
                 .filter(Objects::nonNull)
                 .collect(Collectors.toSet());
 
-            private final Set<String> aliasesInUse = rowsSources.values().stream().map(s -> s.aliasOrNull)
+            private final Set<String> aliasesInUse = allSourceResolutions.stream()
+                .map(s -> s.aliasOrNull)
                 .filter(Objects::nonNull)
                 .map(SQLQuerySymbol::getName)
+                .map(String::toLowerCase)
                 .collect(Collectors.toSet());
 
             @NotNull
@@ -326,7 +446,7 @@ public class SQLQueryRowsSourceContext {
 
             @NotNull
             @Override
-            public Set<DBSObject> getReferencedTables() {
+            public Set<DBSEntity> getReferencedTables() {
                 return this.referencedTables;
             }
 
@@ -340,26 +460,31 @@ public class SQLQueryRowsSourceContext {
 
     @NotNull
     private SQLQueryRowsSourceContext setRowsSources(
-        @NotNull Map<SQLQueryComplexName, KnownRowsSourceInfo> rowsSources,
-        @NotNull Map<String, KnownRowsSourceInfo> sourcesByLoweredAlias
+        @NotNull UnmodifiableMap<SQLQueryComplexName, SourceResolutionResult> rowsSources,
+        @NotNull UnmodifiableMap<String, SourceResolutionResult> sourcesByLoweredAlias,
+        @NotNull UnmodifiableMap<String, SourceResolutionResult> dynamicTableSources,
+        boolean hasUnresolvedSource,
+        @Nullable Supplier<SQLQueryRowsDataContext> relatedContextProvider
     ) {
         return new SQLQueryRowsSourceContext(
-            this.connectionInfo,
-            this.hasUnresolvedSource,
+            this,
+            hasUnresolvedSource,
             rowsSources,
-            this.dynamicTableSources,
-            sourcesByLoweredAlias
+            dynamicTableSources,
+            sourcesByLoweredAlias,
+            relatedContextProvider
         );
     }
 
     @NotNull
-    private SQLQueryRowsSourceContext setDynamicRowsSources(@NotNull Map<String, KnownRowsSourceInfo> dynamicTableSources) {
+    private SQLQueryRowsSourceContext setDynamicRowsSources(@NotNull UnmodifiableMap<String, SourceResolutionResult> dynamicTableSources) {
         return new SQLQueryRowsSourceContext(
-            this.connectionInfo,
+            this,
             this.hasUnresolvedSource,
             this.rowsSources,
             dynamicTableSources,
-            this.sourcesByLoweredAlias
+            this.sourcesByLoweredAlias,
+            this.relatedContextProvider
         );
     }
 
